# nn_race

./: Car.gd  Car.tscn  EmptyMap.tscn  Main.gd  Main.tscn  MainMenu.gd  MainMenu.tscn  Neural.gd  README.md  Track1.gd  Track1.tscn  control_gallery.tscn  project.godot
assets/: car_blue_small_1.png.import  car_red_small_1.png.import  empty_background.png.import  main_theme.tres  mapscaled.png.import  new_dynamicfont.tres  noto_sans_ui_regular.tres  track2b.png.import  track2scaled.png.import
assets/main_menu/: Label_empty.png.import  Label_track1.png.import
assets/main_menu_2/: characters.png.import  label_continue.png.import  label_new_game.png.import  label_options.png.import  title.png.import  version.png.import
matlab/: advanced.m  convert.sh  diagram.slx  f.m  forcoder.m  forcompiler.m  from_csv.awk  matlab.mat  n_x.csv  n_x.csv.import  n_x.txt  neural_test.m  nn_norm.m  norm.m  performance.jpg.import  read_data.m  result.txt  result2.txt  result_file.txt  simple.m  test.csv  test.csv.import  test_forward.m  test_result_file.txt  test_train_file.txt  to_csv.awk  train_file.txt  workspace.mat  wykres.m  x.csv  x.csv.import  x.txt  y.csv  y.csv.import  y.txt  y2.txt  y_godot.csv  y_godot.csv.import  y_godot.txt  y_matlab.csv  (+1 more)
matlab/coder/: create.m  forward.prj  gdBiggerNet.m  gdFilterNet.m  gdNet.m  gdNet.prj  gdNet1.m  gdNet2.m  gdNet20.m  gdNet2T20N.m  gdNet2T20ND.m  gdNet2T30N.m  gdNet2T30ND.m  gdNet2T30Nv2.m  gdNet2T40N.m  gdNet2T40ND.m  gdNet2T40NDv2.m  gdNet2T40NDv3.m  gdNet2T40Nv2.m  gdNet2T40Nv3.m  gdNet3.m  gdNet30.m  gdNet30Mix.m  gdNet3T20N.m  gdNet3T20ND.m  gdNet3T30N.m  gdNet3T30ND.m  gdNet3T30Nv2.m  gdNet3T40N.m  gdNet3T40ND.m  gdNet3T40NDv2.m  gdNet3T40NDv3.m  gdNet3T40Nv2.m  gdNet3T40Nv3.m  gdNetBDMix20.m  gdNetBDMix20v2.m  gdNetBDMix30.m  gdNetBDMix30v2.m  gdNetBDMix40.m  gdNetBDMix40v2.m  (+37 more)
matlab/coder/kopia/: gdNet2T40N.m  gdNet3T40N_working.m  old_gdNet2T40N.m  old_gdNet2T40ND.m  old_gdNet3T40N_working.m
matlab/coder/old/: gdNetT1N40.m  gdNetT2N30D.m
matlab/coder/v1/: gdNet1.m  gdNet1.prj  gdNet1Double.m  gdNet2.m  gdNet2Double.m  gdNetBoth.m  gdNetBothDoubleMix.m
matlab/coder/v2/: gdNet1Doublev2.m  gdNet1v2.m  gdNet2Doublev2.m  gdNet2v2.m  gdNetBothv2.m
matlab/cpp/: forward.c  forward.def  forward.exports  forward.h  forward.lib  readme.txt
matlab/data/: ds_n_x.csv  ds_n_x.txt  ds_n_y.csv  ds_n_y.txt  ds_y.csv  ds_y.txt  main.m  mix.m  mix_x.csv  mix_x.csv.import  mix_y.csv  mix_y.csv.import  n_x.csv  n_x.csv.import  n_x.txt  n_y.csv  nn_norm.m  raw_x.csv  raw_x.csv.import  read_data.m  write_data.m  x.csv  x.csv.import  x1.csv  x1.csv.import  x1n.csv.import  x2.csv  x2.csv.import  x2.txt  x2n.csv.import  y.csv  y.csv.import  y1.csv  y1.csv.import  y1n.csv.import  y2.csv  y2.csv.import  y2n.csv.import  y_matlab.txt
matlab/data/csv/: x1n.csv  x1n.csv.import  x2n.csv  x2n.csv.import  y1n.csv  y1n.csv.import  y2n.csv  y2n.csv.import
matlab/data/v1/: x1n.csv  x1n.csv.import  x2n.csv  x2n.csv.import  y1n.csv  y1n.csv.import  y2n.csv  y2n.csv.import
matlab/data/v2/: x1n.csv  x1n.csv.import  x2n.csv  x2n.csv.import  y1n.csv  y1n.csv.import  y2n.csv  y2n.csv.import
native/: Neural.gdns  gdneural.gdnlib
native/old/: Neural.gdns  gdneural.gdnlib
native/src/: CMakeLists.txt  Neural.cpp  Neural.h  gdlibrary.cpp  main.cpp
native/src/matlib/: GdNet.h  GdNeural.h  gdNet.lib  gdNet3T40N_working_data.h  gdNet3T40N_working_types.h  gdNetLib_data.h  gdNetLib_types.h  gdNet_data.h  gdNet_types.h  rtwtypes.h
scenes/: Car.gd  Car.tscn  Car2.tscn  LapChecker.tscn  Map.tscn
scenes/gui/: MainMenu.gd  MainMenu.tscn  SettingsMenu.gd  SettingsMenu.tscn  TrainMenu.gd  TrainMenu.tscn
scenes/levels/: EmptyMap.tscn  Track1.gd  Track1.tscn  Track2.tscn
scenes/old/: Car.gd  Car.tscn
src/: Car.gd  Car.tscn  Car2.gd  DrawingNode.gd  EmptyMap.tscn  Global.gd  LapChecker.gd  MainMenu.gd  MainMenu.tscn  Map.gd  Neural.gd  SettingsMenu.gd  SettingsMenu.tscn  Track1.gd  Track1.tscn  Track2.tscn  global.gd
src/gui/: AcceptDialog.gd  MainMenu.gd  SettingsMenu.gd  TrainMenu.gd
src/levels/: Node2D.gd  Track1.gd
test/: control_gallery.tscn  paint_root.tscn  paint_tools.png.import
(+7 files in other folders)
